# py-installable

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  README.md  conftest.py  makefile  pyproject.toml  requirements.txt
src/cli_command/: __main__.py  arguments.py  config.ini  configs.py  main.py
tests/: test_main.py
