[project]
dynamic = ["version"]

name = "cli_command"
description = "Template to pip install from github"
readme = "README.md"
requires-python = ">= 3.7"

[project.scripts]
py-command = "cli_command.main:main"

[project.gui-scripts]
py-command-gui  = "cli_command.main:main"

[build-system]
# The lower bound is for <https://github.com/pypa/setuptools/issues/3865>.
requires = ["setuptools>=67.6.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "cli_command.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["contrib", "docs", "tests*", "tasks"]